# nanoDSL

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-typedsl.yml
ezdsl/: pyproject.toml
ezdsl/src/ezdsl/: __init__.py  core.py  schema.py  serialization.py  types.py
ezdsl/tests/: __init__.py  test_custom_types.py  test_generic_node.py  test_node_generic_example.py  test_schema.py  test_types.py
src/nanodsl/: __init__.py  adapters.py  ast.py  nodes.py  schema.py  serialization.py  types.py
src/typedsl/: adapters.py  ast.py  nodes.py  schema.py  serialization.py  types.py
tests/: test_custom_types.py  test_generic_node.py  test_integration.py  test_node_generic_example.py  test_nodes.py  test_schema.py  test_serialization.py  test_signature.py  test_specific_node_types.py  test_types.py
