[project]
name = "typeDSL"
version = "0.1.0"
description = "A type-safe node system for building ASTs and DSLs in Python 3.12+"
readme = "README.md"
authors = [
    { name = "Jim Lundin", email = "JimLundin@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.7"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "T201",    # print statements allowed
    "D102",    # missing docstrings in public methods - too strict for this codebase
    "D105",    # missing docstrings in magic methods
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "ANN401",  # Any type allowed - needed for serialization
    "SLF001",  # private member access allowed - _tag pattern is by design
    "TC006",   # quotes in cast - style preference
    "SIM102",  # nested if statements - valid style choice
    "C901",    # function complexity - extract_type is intentionally complex
    "PLR0911", # too many return statements - extract_type needs them
    "PLR0912", # too many branches - extract_type needs them
    "PLR2004", # magic values in comparisons - acceptable for error messages
    "COM812",  # trailing comma - conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # asserts allowed in tests
    "S102",    # exec allowed in tests
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant
    "FBT",     # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic value used in comparison
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "PLC0415", # imports inside functions allowed in tests
    "ERA001",  # commented-out code allowed in tests for documentation
    "D205",    # docstring formatting relaxed in tests
    "N806",    # variable naming relaxed in tests
    "PT011",   # pytest.raises match parameter not required
    "PGH003",  # type ignore specificity not required in tests
]
