[project]
name = "typeDSL"
version = "0.1.0"
description = "A type-safe node system for building ASTs and DSLs in Python 3.12+"
readme = "README.md"
authors = [
    { name = "Jim Lundin", email = "JimLundin@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.7"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/typedsl"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryIsInstance = "warning"  # Defensive checks for invalid inputs are fine

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
